--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   screenshotgun:
     hostname: screenshotgun
-    build: .
+    image: ismd/screenshotgun-website
   nginx:
     image: nginx
     ports:
